# target-intacct-v3

./: .gitignore  README.md  ci.env  meltano.yml  pyproject.toml
.github/workflows/: smoke-test.yml
target_intacct_v3/: base_sinks.py  client.py  lambda.py  sinks.py  target.py  util.py
target_intacct_v3/mappers/: attachment_schema_mapper.py  base_mapper.py  bill_line_item_or_expense_schema_mapper.py  bill_payment_schema_mapper.py  bill_schema_mapper.py  item_schema_mapper.py  vendor_credit_line_item_or_expense_schema_mapper.py  vendor_credit_schema_mapper.py  vendor_schema_mapper.py
target_intacct_v3/sinks/: bill_payment_sink.py  bill_sink.py  item_sink.py  vendor_credit_sink.py  vendor_sink.py
target_intacct_v3/tests/: __init__.py  test_core.py
